# final-project

./: README.md  pyproject.toml  requirements.txt
Tableau/: Tableau visualizations
data/clean/: churn_rate_by_active_membership.csv  churn_rate_by_gender.csv  churn_rate_by_geography.csv  churn_rate_by_tenure.csv  german_churn_analysis_df.csv  germany_gender_churn.csv
data/raw/: dataset_churn.arff  final_project.sql
models/: ada_model.pkl  bag_model.pkl  forest_model.pkl  gb_model_model.pkl  gb_tune.pkl  gb_tune_grid.pkl  knn_norm.pkl  knn_scaled.pkl  log_model.pkl
notebooks/: final_project.ipynb
notebooks/.ipynb_checkpoints/: final_project-checkpoint.ipynb
notebooks/models/: knn_model.pkl
scalers/: norm_scaler.pkl  standard_scaler.pkl
