[project]
name = "final-project"
version = "0.1.0"
description = "Final Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "liac-arff>=2.5.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
    "scikit-learn",
    "imblearn",
    "xgboost",
    "ace-tools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
